--- a/.gitignore
+++ b/.gitignore
@@ -70,3 +70,5 @@ crashlytics-build.properties
 # Temporary auto-generated Android Assets
 /[Aa]ssets/[Ss]treamingAssets/aa.meta
 /[Aa]ssets/[Ss]treamingAssets/aa/*
+Assets/mystic_woods_free_2.2/sprites/characters/player.png.meta
+Assets/mystic_woods_free_2.2/sprites/characters/player.png.meta
